--- a/site.css
+++ b/site.css
@@ -87,7 +87,7 @@ body .main-container {
     width: 84%;
 }
 
-#shareRoundIcons {
+header .shareIcons {
     display: inline-block;
     width: 84%;
     height: 0%;
@@ -208,26 +208,26 @@ body .main-container {
 
 /**** MEDIA QUERIES ****/
 @media only screen and (max-width: 991px) {
-    #property-listings .property-listing {
+    #listings .listing {
         padding: 5px !important;
     }
 
-        #property-listings .property-listing a {
+        #listings .listing a {
             margin: 0;
         }
 
-        #property-listings .property-listing .media-body {
+        #listings .listing .media-body {
             padding: 10px;
         }
 }
 
 @media only screen and (min-width: 992px) {
-    #property-listings .property-listing img {
+    #listings .listing img {
         max-width: 180px;
     }
 }
 
-.property-listing:hover {
+.listing:hover {
     /* Webkit for Chrome and Safari */
     -webkit-transform: scale(1.1, 1.1);
     -webkit-transition-duration: 500ms;
@@ -240,10 +240,10 @@ body .main-container {
     -ms-transform: scale(1.10, 1.10);
     -ms-transition-duration: 500ms;
     -ms-transition-timing-function: ease-in;
-    opacity: 0.7;
+    opacity: 0.9;
 }
 
-.property-listing .btn-content {
+.listing .btn-content {
     float: left;
     margin-right: 7px;
 }
@@ -263,6 +263,10 @@ body .main-container {
     padding-top: 10px;
 }
 
-.property-listing {
+.listing {
     cursor: pointer;
+}
+
+.bottom-margin-10 {
+    margin-bottom: 10px;
 }
